--- a/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.scss
+++ b/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.scss
@@ -26,7 +26,7 @@ a {
 }
 
 ::ng-deep .dark-layout .bg-daily-tasks {
-  background-image: linear-gradient(to right, mix(black, $primary, 50), mix(black, $primary, 70)) !important;
+  background-image: linear-gradient(to right, mix(black, $primary, 40), mix(black, $primary, 50), mix(black, $primary, 55), mix(black, $primary, 60)) !important;
 }
 
 .list-group-item {
