[REFACTORING] KEP contestdan aldingi refactorlar

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,9 +1,8 @@
-<ul class="lightrope">
+<ul *ngIf="lightsEnabled" class="lightrope">
   @for (_ of [].constructor(lightsCount); track _){
     <li></li>
   }
 </ul>
-
 
 @defer (when coreConfig.layout.type === 'vertical') {
   @if (coreConfig.layout.type === 'vertical'){
