--- a/src/app/modules/problems/components/problem-body/problem-body.component.html
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.html
@@ -32,6 +32,7 @@
 <problem1843 *ngIf="problem.id == 1843"></problem1843>
 <problem1869 *ngIf="problem.id == 1869"></problem1869>
 <problem1903 *ngIf="problem.id == 1903"></problem1903>
+<problem1905 *ngIf="problem.id == 1905"></problem1905>
 
 <hr>
 
