--- a/src/core/scss/base/bootstrap-extended.scss
+++ b/src/core/scss/base/bootstrap-extended.scss
@@ -29,6 +29,7 @@
 @import 'bootstrap-extended/toast';
 @import 'bootstrap-extended/collapse';
 @import 'bootstrap-extended/pagination';
+@import 'plugins/extensions/ext-component-sweet-alerts';
 
 // Components w/ JavaScript
 @import 'bootstrap-extended/modal';
