--- a/src/app/modules/contests/pages/contest/contest-questions/contest-question-card/contest-question-card.component.html
+++ b/src/app/modules/contests/pages/contest/contest-questions/contest-question-card/contest-question-card.component.html
@@ -19,6 +19,8 @@
   </div>
 
   <div class="card-footer">
-    <span *ngIf="question.answer" class="text-dark" [innerHTML]="question.answer"></span>
+    <span *ngIf="question.answer" class="text-dark">
+      <mathjax [content]="question.answer"></mathjax>
+    </span>
   </div>
 </div>
