--- a/src/app/styles/vuexy-extended/content.scss
+++ b/src/app/styles/vuexy-extended/content.scss
@@ -71,3 +71,13 @@ li[core-menu-horizontal-collapsible],
 :root .dark-layout {
   --inherit-bg-box-shadow: 0 2px 12px 0 rgba(255, 255, 255, 0.05);
 }
+
+a.nav-link:hover {
+  background-color: rgba($primary, 0.05);
+  border-radius: 5px;
+  transition: 0.2s ease-in;
+}
+
+.list-group-item:hover {
+  background-color: rgba($primary, 0.05) !important;
+}
