[REFACTORING] home page | container wrapper & remove statistics section

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -2,95 +2,101 @@
   <div class="col-12 header-section">
     <header-section></header-section>
   </div>
-
-  <div class="offset-lg-1 offset-0 col-lg-6 col-md-8 col-12">
-    <news-section></news-section>
-  </div>
-
-  <div class="col-lg-4 col-md-4 col-sm-12">
-    <activity-section></activity-section>
-    <profile-section></profile-section>
-  </div>
-
-  <div class="col-12 mt-1">
+</div>
+<div class="content-wrapper container-xxl p-0">
+  <div class="content-body">
     <div class="row">
-      <div class="col-lg-4 col-12">
-        @defer (on viewport){
-          <top-rating-section></top-rating-section>
-        } @placeholder (minimum 500ms) {
-          <div class="card" [style.height.px]="250">
-            <spinner></spinner>
-          </div>
-        }
+      <div class="offset-lg-1 offset-0 col-lg-6 col-md-8 col-12">
+        <news-section></news-section>
       </div>
-      <div class="col-lg-4 col-12">
-        @defer (on viewport){
-          <system-section></system-section>
-        } @placeholder (minimum 500ms) {
-          <div class="card" [style.height.px]="275">
-            <spinner></spinner>
-          </div>
-        }
-      </div>
-      <div class="col-lg-4 col-12">
-        @defer (on viewport){
-          <users-chart-card></users-chart-card>
-        } @placeholder (minimum 500ms) {
-          <div class="card" [style.height.px]="250">
-            <spinner></spinner>
-          </div>
-        }
-      </div>
-    </div>
-  </div>
 
-  <div class="col-lg-8 offset-lg-2 col-12 text-center">
-    @defer (on viewport){
-      <calendar-section></calendar-section>
-    } @placeholder (minimum 500ms) {
-      <div class="card" [style.height.px]="600">
-        <spinner></spinner>
+      <div class="col-lg-4 col-md-4 col-sm-12">
+        <activity-section></activity-section>
+        <profile-section></profile-section>
       </div>
-    }
-  </div>
 
-  <div class="col-12 mt-1">
-    <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="col-12 mt-1">
+        <div class="row">
+          <div class="col-lg-4 col-12">
+            @defer (on viewport){
+              <top-rating-section></top-rating-section>
+            } @placeholder (minimum 500ms) {
+              <div class="card" [style.height.px]="250">
+                <spinner></spinner>
+              </div>
+            }
+          </div>
+          <div class="col-lg-4 col-12">
+            @defer (on viewport){
+              <system-section></system-section>
+            } @placeholder (minimum 500ms) {
+              <div class="card" [style.height.px]="275">
+                <spinner></spinner>
+              </div>
+            }
+          </div>
+          <div class="col-lg-4 col-12">
+            @defer (on viewport){
+              <users-chart-card></users-chart-card>
+            } @placeholder (minimum 500ms) {
+              <div class="card" [style.height.px]="250">
+                <spinner></spinner>
+              </div>
+            }
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-8 offset-lg-2 col-12 text-center">
         @defer (on viewport){
-          <birthdays-section></birthdays-section>
+          <calendar-section></calendar-section>
         } @placeholder (minimum 500ms) {
           <div class="card" [style.height.px]="600">
             <spinner></spinner>
           </div>
         }
       </div>
-      <div class="col-lg-9 col-md-6 col-sm-12">
-        <div class="mb-4">
-          @defer (on viewport){
-            <posts-section></posts-section>
-          } @placeholder (minimum 500ms) {
-            <div class="card" [style.height.px]="500">
-              <spinner></spinner>
+
+      <div class="col-12 mt-1">
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            @defer (on viewport){
+              <birthdays-section></birthdays-section>
+            } @placeholder (minimum 500ms) {
+              <div class="card" [style.height.px]="600">
+                <spinner></spinner>
+              </div>
+            }
+          </div>
+          <div class="col-lg-9 col-md-6 col-sm-12">
+            <div class="mb-4">
+              @defer (on viewport){
+                <posts-section></posts-section>
+              } @placeholder (minimum 500ms) {
+                <div class="card" [style.height.px]="500">
+                  <spinner></spinner>
+                </div>
+              }
             </div>
-          }
+          </div>
+
         </div>
       </div>
 
     </div>
   </div>
-
-  <div class="col-12">
-    @defer (on viewport) {
-      <statistics-section></statistics-section>
-    } @placeholder (minimum 500ms) {
-      <div class="card" [style.height.px]="200">
-        <spinner></spinner>
-      </div>
-    }
-  </div>
-
 </div>
+
+
+<!--  <div class="col-12">-->
+<!--    @defer (on viewport) {-->
+<!--      <statistics-section></statistics-section>-->
+<!--    } @placeholder (minimum 500ms) {-->
+<!--      <div class="card" [style.height.px]="200">-->
+<!--        <spinner></spinner>-->
+<!--      </div>-->
+<!--    }-->
+<!--  </div>-->
 
 <audio
     #audio
