[REFACTORING] custom breakpoints

--- a/src/app/layout/horizontal/horizontal-layout.component.html
+++ b/src/app/layout/horizontal/horizontal-layout.component.html
@@ -51,7 +51,7 @@
     <core-sidebar
       name="menu"
       [collapsed]="coreConfig.layout.menu.collapsed"
-      collapsibleSidebar="bs-gt-xl"
+      collapsibleSidebar="gt-xl"
       *ngIf="!coreConfig.layout.menu.hidden"
       class="main-menu menu-fixed menu-light menu-accordio menu-shadow d-xl-none"
       overlayClass="sidenav-overlay"
