--- a/src/app/layout/vertical/vertical-layout.component.html
+++ b/src/app/layout/vertical/vertical-layout.component.html
@@ -42,7 +42,7 @@
   <core-sidebar
     name="menu"
     [collapsed]="coreConfig.layout.menu.collapsed"
-    collapsibleSidebar="bs-gt-xl"
+    collapsibleSidebar="gt-xl"
     *ngIf="!coreConfig.layout.menu.hidden"
     class="main-menu menu-fixed menu-accordio menu-shadow"
     overlayClass="sidenav-overlay"
