[REFACTORING] study-plan card

--- a/src/app/modules/problems/components/study-plan-card/study-plan-card.component.html
+++ b/src/app/modules/problems/components/study-plan-card/study-plan-card.component.html
@@ -14,7 +14,7 @@
 
     <div class="card-body">
       <div class="study-plan-icon">
-<!--        <img src="{{ studyPlan.icon }}" alt="study-plan-icon">-->
+        <img src="{{ studyPlan.icon }}" alt="study-plan-icon">
       </div>
     </div>
   </div>
