--- a/src/app/shared/components/kep-icon/kep-icon.component.html
+++ b/src/app/shared/components/kep-icon/kep-icon.component.html
@@ -1,9 +1,9 @@
 @if (type === 'duotone') {
-  <span class="ki-{{ type }} ki-{{ name }}{{ class ? ' ' + class : '' }}">
+  <span [ngClass]="['ki-'+type, 'ki-'+name, class, color ? 'text-' + color : '', size ? 'font-' + size : '']">
   @for (i of [].constructor(pathsNumber);track i;let idx = $index) {
     <span class="path{{ idx + 1 }}"></span>
   }
-</span>
+  </span>
 } @else {
-  <span class="ki-{{ type }} ki-{{ name }}{{ class ? ' ' + class : '' }}"></span>
+  <span [ngClass]="['ki-'+type, 'ki-'+name, class, color ? 'text-' + color : '', size ? 'font-' + size : '']"></span>
 }
