[UPDATE] beautiful-table class

--- a/src/app/styles/vuexy-extended/beautiful-table.scss
+++ b/src/app/styles/vuexy-extended/beautiful-table.scss
@@ -2,8 +2,8 @@
   transition: all 0.2s ease;
   opacity: 0.9;
   border: none;
-  box-shadow: var(--inherit-bg-box-shadow) !important;
-  border-radius: 10px;
+  // box-shadow: var(--inherit-bg-box-shadow) !important;
+  border-radius: 5px;
 
   th,
   td {
