--- a/src/app/modules/problems/pages/rating/rating.component.html
+++ b/src/app/modules/problems/pages/rating/rating.component.html
@@ -26,7 +26,7 @@
                 [ordering]="'solved'"
                 [reverse]="true"
                 [value]="ordering">
-                <kep-icon name="problem"></kep-icon>
+                <kep-icon name="check-square"></kep-icon>
               </table-ordering>
             </th>
 
